// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Red Toast 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill redBg shadow"
  >
    <div
      className="box itemsCenter marginEndN2 marginStartN2 xsDisplayFlex"
    >
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 white alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image + Button 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill shadow whiteBg"
  >
    <div
      className="box itemsCenter marginEndN2 marginStartN2 xsDisplayFlex"
    >
      <div
        className="box flexNone justifyCenter paddingX2 xsDisplayFlex"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
        >
          Saved to
           
          <a
            className="link hideOutline tapTransition rounding0 block hoverUnderline accessibilityOutline"
            href="https://www.pinterest.com/search/pins/?q=home%20decor"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            rel=""
            target={null}
          >
            Home decor
          </a>
        </div>
      </div>
      <div
        className="box flexNone paddingX2"
      >
        <button
          className="button hideOutline tapTransition lg gray enabled block accessibilityOutline"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="Text fontSize3 darkGray alignCenter fontWeightBold"
          >
            Undo
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill shadow whiteBg"
  >
    <div
      className="box itemsCenter marginEndN2 marginStartN2 xsDisplayFlex"
    >
      <div
        className="box flexNone justifyCenter paddingX2 xsDisplayFlex"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
        >
          Saved to
           
          <a
            className="link hideOutline tapTransition rounding0 block hoverUnderline accessibilityOutline"
            href="https://www.pinterest.com/search/pins/?q=home%20decor"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            rel=""
            target={null}
          >
            Home decor
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text Only 1`] = `
<div
  className="box marginBottom3 paddingX4"
  style={
    Object {
      "maxWidth": 360,
      "width": "100vw",
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill shadow whiteBg"
  >
    <div
      className="box itemsCenter marginEndN2 marginStartN2 xsDisplayFlex"
    >
      <div
        className="box flexGrow justifyCenter paddingX2 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;
